<resources>
    <string name="app_name">Plantico</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_plant">Add a plant!</string>
    <string name="title_activity_plant">PlantActivity</string>
    <string name="plant_difficulty_header">Difficulty:</string>
    <string name="plant_genus_header">Genus:</string>
    <string name="plant_subfamily_header">Subfamily:</string>
    <string name="plant_family_header">Family:</string>
    <string name="plant_category_header">Category:</string>
    <string name="view_all"><u>View All</u></string>
    <string name="homescreen_upcomming_waterings">Upcoming Waterings</string>
    <string name="homescreen_last_visited_plants">Last visited plants</string>
    <string name="homescreen_to_see_something_add_some_plants">To see something, add some plants.</string>
    <string name="homescreen_search_no_data">To see something, search for some plants in the Searchtab.</string>
    <string name="Home">Home</string>
    <string name="Plants">My Plants</string>
    <string name="Search">Search</string>
    <string name="Users">Profile</string>
    <string name="search_hint">Search plants</string>
    <string name="search_category_dialog_title">Select your categories</string>
    <string name="search_category_select">SELECT CATEGORY</string>
    <string name="search_category">Category</string>
    <string name="search_difficulty">Difficulty</string>
    <string name="results_found">%d results found</string>
    <string name="no_results_found">No results found for your query.</string>
    <string name="plantico_app_logo">Plantico</string>
    <string name="plant_tribe_header">Tribe:</string>
    <string name="plant_species_header">Type Species:</string>
    <string name="plant_categories_header">Categories:</string>
    <string name="plant_watering_header">Watering level:</string>
    <string name="plant_watering_cycle_header">Watering cycle:</string>
    <string name="plant_general_description">General Description:</string>
    <string name="plant_propagation_instructions">Propagation Instructions:</string>
    <string name="plant_watering_instructions">Watering Instructions:</string>
    <string name="plant_difficulty">Difficulty:</string>
    <string name="add_plant_button_text">Add Plant</string>
    <string name="days_till_watering">Days till watering:</string>
    <string name="age">Age:</string>
    <string name="years_old">%d years old</string>
    <string name="x_days_till_watering">%d days</string>
    <string name="add_watering_plant_text">ADD WATERING</string>
    <string name="plant_last_watered">Last time watered:</string>
    <string name="plant_birthday">Plant birthday:</string>
    <string name="plant_location">Location:</string>
    <string name="plant_own_add_name">Name:</string>
    <string name="plant_own_hint_name">New plant name</string>
    <string name="plant_own_add_watering">Watering cycle:</string>
    <string name="plant_own_add_days">Days</string>
    <string name="plant_own_location_hint">Plant location</string>
    <string name="plant_own_date_hint">dd.mm.yyyy</string>
    <string name="plant_own_add_cancel">Cancel</string>
    <string name="plant_own_add_save">Save</string>
</resources>
