<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.homescreen.HomescreenActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_plant_view"
        android:background="@color/primary"
        app:titleTextColor="@color/white"
        android:gravity="center"
        style="@style/Theme.Design.NoActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_plantico_text"
            android:contentDescription="@string/plantico_app_logo" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_plant_view"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/plant_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:elevation="10dp"
                android:src="@drawable/bonsai_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/plant_circle" />

            <ImageView
                android:id="@+id/plant_circle"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_circle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_image" />

            <TextView
                android:id="@+id/header_plant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_own_add_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_plant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="false"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_plant_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/plant_own_hint_name"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/header_watering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_own_add_watering"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/header_plant_location"
                app:layout_constraintTop_toBottomOf="@+id/input_plant_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_watering"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"

                app:layout_constraintEnd_toStartOf="@+id/header_watering_days"

                app:layout_constraintStart_toEndOf="@+id/header_watering"
                app:layout_constraintTop_toBottomOf="@+id/input_plant_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/header_watering_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/plant_own_add_days"
                app:layout_constraintBottom_toTopOf="@+id/header_plant_location"
                app:layout_constraintStart_toEndOf="@id/input_watering"
                app:layout_constraintTop_toBottomOf="@+id/input_plant_name" />


            <TextView
                android:id="@+id/header_plant_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_location"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_watering" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_plant_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_plant_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/plant_own_location_hint"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/header_plant_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_birthday"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_plant_location" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_plant_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_plant_birthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plant_own_date_hint"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="60dp"
                app:layout_constraintEnd_toStartOf="@+id/button_save_plant"
                app:layout_constraintTop_toBottomOf="@+id/input_plant_birthday"
                android:text="@string/plant_own_add_cancel"
                android:textColor="@color/error"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/error"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save_plant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                app:layout_constraintStart_toEndOf="@+id/button_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/input_plant_birthday"
                android:text="@string/plant_own_add_save"
                android:textColor="@color/primary"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/primary"
                app:strokeWidth="1dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/primary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>
