<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_homescreen"
        android:background="@color/primary"
        app:titleTextColor="@color/white"
        android:gravity="center"
        style="@style/Theme.Design.NoActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_plantico_text"/>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/last_visited_plants_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:text="@string/homescreen_last_visited_plants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_homescreen"
        />

    <TextView
        android:id="@+id/view_all_plants_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:text="@string/view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/last_visited_plants_text"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_last_visited_plants"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/upcoming_watering_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_visited_plants_text" />

    <TextView
        android:id="@+id/no_data_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/homescreen_search_no_data"
        app:layout_constraintBottom_toTopOf="@+id/upcoming_watering_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_visited_plants_text"
        />

    <TextView
        android:id="@+id/upcoming_watering_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/homescreen_upcomming_waterings"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview_upcoming_watering"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/view_all_watering_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:text="@string/view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/upcoming_watering_text"
        />

    <TextView
        android:id="@+id/no_data_watering"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/homescreen_to_see_something_add_some_plants"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_upcoming_watering"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:text="menu"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>